[project]
name = "rknbot"
version = "0.1.0"
description = ""
authors = [
    {name = "c0ral0vii",email = "demidovic.pavel2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "playwright (>=1.50.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pytz (>=2025.1,<2026.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

